--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "firebase": "^12.4.0",
+    "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
